# Voxd

./: .editorconfig  .gitignore  README.md  a.py  flash_copilot.py  launch_pygpt.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_all.py
.github/workflows/: ci.yml
config/: config.json.example  flash_preset.json
core/: brain.py  desktop_control.py  gpu_lock.py  hotkey_listener.py  memory_engine.py  monitor.py  plugin_loader.py  safety.py  voice_engine.py
plugins/plugin_flash_avatar/: __init__.py  plugin.py
plugins/plugin_piper_tts/: __init__.py  plugin.py
scripts/: cheatsheet.sh  install.sh  launch.sh  ptt.sh  setup_autostart.sh  toggle.sh  upgrade_v5.sh
