[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voxd"
version = "1.0.0"
description = "A fully local, hands-free voice assistant for Ubuntu — no cloud, no API keys, no subscriptions"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Vox Contributors"}
]
keywords = [
    "voice-assistant",
    "local-ai",
    "privacy-first",
    "ollama",
    "whisper",
    "piper"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound",
    "Topic :: Office/Business",
    "Topic :: System :: Shells",
]

dependencies = [
    "PyQt6==6.6.1",
    "faster-whisper==1.0.3",
    "sounddevice==0.4.6",
    "soundfile==0.12.1",
    "numpy==1.26.4",
    "chromadb==0.4.22",
    "sentence-transformers==2.2.2",
    "psutil==5.9.6",
    "requests==2.31.0",
    "pynput==1.7.6",
    "ddgs==9.14.4",
]

[project.optional-dependencies]
pygpt = ["pygpt-net==2.4.36"]
dev = [
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "pytest-mock==3.14.0",
    "black==25.1.0",
    "isort==5.13.2",
    "mypy==1.14.1",
    "ruff==0.15.19",
]

[project.urls]
Homepage = "https://github.com/ekansh-the-great/voxd"
Repository = "https://github.com/ekansh-the-great/voxd.git"
Issues = "https://github.com/ekansh-the-great/voxd/issues"
Documentation = "https://github.com/ekansh-the-great/voxd#readme"

[project.scripts]
flash-copilot = "flash_copilot:main"

[tool.setuptools]
packages = ["core", "plugins"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # Directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
]
ignore = [
    "E501",  # line too long (handled by black)
    "C901",  # function complexity — tracked as future refactor, not a bug
    "B905",  # zip() without strict= — stylistic, not a correctness issue
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports
